src/app/globals.css
@import "tailwindcss";
@import "@radix-ui/themes/styles.css";

:root {
  --background: #F5F7FF;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;

}

@layer base {
  body {
    @apply bg-background text-foreground;
  }
}

